[gd_scene load_steps=38 format=2]

[ext_resource path="res://Scenes/boc.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Levels/MoonProjectile.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Grass.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Breaker.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Levels/Moon.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Levels/CPUParticles2D.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Miscellaneous.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/RainbowStars.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Death Plane.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/spaceback.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Fire.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/moon ph1.png" type="Texture" id=14]
[ext_resource path="res://Assets/citygud.png" type="Texture" id=15]
[ext_resource path="res://Scripts/Title.gd" type="Script" id=16]
[ext_resource path="res://Assets/daarkmoonlaugh2.png" type="Texture" id=17]
[ext_resource path="res://Assets/moon ph2.png" type="Texture" id=18]
[ext_resource path="res://Assets/moon ph3.png" type="Texture" id=19]
[ext_resource path="res://Assets/moon_ph2.png" type="Texture" id=20]
[ext_resource path="res://Assets/moon_ph2-sheet.png" type="Texture" id=21]
[ext_resource path="res://Assets/moon_over.png" type="Texture" id=22]
[ext_resource path="res://Assets/blinkstar1.png" type="Texture" id=36]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 21 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "1FStatic",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "3 Flame",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "2FStatic",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "1 Flame",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "NFStatic",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "3FStatic",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "No Flame",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "2 Flame",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 3.20001, 1.77778 )

[node name="Sea" type="Node2D"]

[node name="spaceback" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.686275, 0, 1, 0.901961 )
position = Vector2( 480, 312 )
rotation = 1.57079
texture = ExtResource( 12 )

[node name="RainbowStars" parent="." instance=ExtResource( 10 )]
position = Vector2( 480, 328 )
rotation = -1.57079

[node name="RainbowStars2" parent="." instance=ExtResource( 10 )]
position = Vector2( 480, 45 )
rotation = -1.57079

[node name="citygud2" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.266667, 0, 0.388235, 0.784314 )
position = Vector2( 816, 376 )
rotation = -1.57079
texture = ExtResource( 15 )

[node name="citygud" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.266667, 0, 0.388235, 0.784314 )
position = Vector2( 144, 376 )
rotation = 1.57079
texture = ExtResource( 15 )

[node name="RainbowStars3" parent="." instance=ExtResource( 10 )]
position = Vector2( 448, 568 )

[node name="RainbowStars4" parent="." instance=ExtResource( 10 )]
position = Vector2( 448, 56 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 512, 280 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="Moon" type="AnimatedSprite" parent="Player"]
position = Vector2( -3.99999, -234 )
scale = Vector2( 1.25, 1.125 )
frames = SubResource( 13 )
animation = "NFStatic"
script = ExtResource( 7 )

[node name="ProjectileArea" type="KinematicBody2D" parent="Player/Moon"]
script = ExtResource( 3 )

[node name="Projectile" type="CPUParticles2D" parent="Player/Moon/ProjectileArea"]
amount = 1
lifetime = 3.0
speed_scale = 0.75
gravity = Vector2( 0, 0 )
scale_amount = 5.0
color = Color( 0.686275, 0, 1, 1 )

[node name="ProjectileCollision" type="CollisionShape2D" parent="Player/Moon/ProjectileArea"]
shape = SubResource( 14 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Player/Moon"]
position = Vector2( 0, -1.45453 )
scale = Vector2( 3.75, 3.77273 )
emitting = false
amount = 50
lifetime = 0.4
one_shot = true
speed_scale = 0.75
randomness = 1.0
texture = ExtResource( 36 )
emission_shape = 2
emission_rect_extents = Vector2( 20, 20 )
gravity = Vector2( 0, 0 )
radial_accel = -100.0
scale_amount = 0.2
hue_variation = 1.0
hue_variation_random = 1.0
script = ExtResource( 8 )

[node name="MoonTimer" type="Timer" parent="Player/Moon"]
wait_time = 20.0
__meta__ = {
"_editor_description_": "its for testing change to 20 bec every 20 sec he attack"
}

[node name="ProjectileTimer" type="Timer" parent="Player/Moon"]
wait_time = 2.0
one_shot = true
__meta__ = {
"_editor_description_": "should be 2"
}

[node name="Grass" parent="." instance=ExtResource( 5 )]
position = Vector2( -1, 0 )
tile_data = PoolIntArray( 393231, 12, 0, 393232, 12, 0, 589838, 12, 0, 589839, 12, 0, 589840, 12, 0, 1245195, 9, 0, 1245196, 9, 0, 1245197, 9, 0, 1245198, 9, 0, 1245199, 9, 0, 1245200, 9, 0, 1245201, 9, 0, 1245202, 9, 0 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray(  )

[node name="Miscellaneous" parent="." instance=ExtResource( 9 )]
tile_data = PoolIntArray( 9, 7, 0, 131095, 7, 0, 327692, 7, 0, 393238, 7, 0, 524306, 7, 0, 589828, 7, 0, 786452, 7, 0, 983051, 7, 0 )

[node name="Breaker" parent="." instance=ExtResource( 6 )]
position = Vector2( 48, 192 )

[node name="Breaker2" parent="." instance=ExtResource( 6 )]
position = Vector2( 508, 136 )

[node name="Breaker3" parent="." instance=ExtResource( 6 )]
position = Vector2( 976, 240 )

[node name="Fire" parent="." instance=ExtResource( 13 )]
position = Vector2( 16, 552 )

[node name="Death Plane" parent="." instance=ExtResource( 11 )]
position = Vector2( 528, 696 )

[node name="Title" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 512, 288 )
scale = Vector2( 1, 1.05263 )
texture = ExtResource( 15 )
script = ExtResource( 16 )

[node name="Particle" type="CPUParticles2D" parent="Title"]
emitting = false
amount = 100
lifetime = 4.0
one_shot = true
explosiveness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 300, 300 )
gravity = Vector2( 0, -50 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="TitleTimer" type="Timer" parent="Title"]
autostart = true

[node name="RichTextLabel" type="RichTextLabel" parent="Title"]
light_mask = -2147483647
margin_left = -224.0
margin_top = -76.0
margin_right = 176.0
margin_bottom = 99.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center] [color=#0025f5]S[/color][color=#00ffff]e[/color][color=#3dd2ff]a[/color] 
[color=#9400d3]o[/color][color=#0000ff]f[/color]
[color=#00ff00]S[/color][color=#ffff00]t[/color][color=#ff7f00]a[/color][color=#ff0000]r[/color][color=#ff4888]s[/color][/center]
"
text = " Sea 
of
Stars
"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
[connection signal="Block" from="Player" to="Grass" method="_on_Player_Block"]
[connection signal="Direction" from="Player" to="Grass" method="_on_Player_Direction"]
[connection signal="Interact" from="Player" to="Grass" method="_on_Player_Interact"]
[connection signal="shot" from="Player/Moon/ProjectileArea" to="Player" method="_on_ProjectileArea_shot"]
[connection signal="timeout" from="Player/Moon/MoonTimer" to="Player/Moon" method="_on_MoonTimer_timeout"]
[connection signal="timeout" from="Player/Moon/MoonTimer" to="Player/Moon/CPUParticles2D" method="_on_MoonTimer_timeout"]
[connection signal="timeout" from="Player/Moon/ProjectileTimer" to="Player/Moon/ProjectileArea" method="_on_ProjectileTimer_timeout"]
[connection signal="blocks" from="Grass" to="Player" method="_on_Grass_blocks"]
[connection signal="body_entered" from="Breaker" to="Breaker" method="_on_Breaker_body_entered"]
[connection signal="body_entered" from="Breaker" to="Player" method="_on_Breaker_body_entered"]
[connection signal="body_entered" from="Breaker2" to="Breaker2" method="_on_Breaker_body_entered"]
[connection signal="body_entered" from="Breaker2" to="Player" method="_on_Breaker_body_entered"]
[connection signal="body_entered" from="Breaker3" to="Breaker3" method="_on_Breaker_body_entered"]
[connection signal="body_entered" from="Breaker3" to="Player" method="_on_Breaker_body_entered"]
[connection signal="body_entered" from="Fire" to="Player" method="_on_Fire_body_entered"]
[connection signal="body_entered" from="Death Plane" to="Player" method="_on_Death_Plane_body_entered"]
[connection signal="timeout" from="Title/TitleTimer" to="Player/Moon" method="_on_TitleTimer_timeout"]
[connection signal="timeout" from="Title/TitleTimer" to="Title" method="_on_TitleTimer_timeout"]
